2004-12-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.0 ===

Fri Dec 10 13:57:44 2004  Manish Singh  <yosh@gimp.org>

	* abicheck.sh: filter out PRIVATE.

2004-12-05  Tor Lillqvist  <tml@iki.fi>

	* gdk-pixbuf-animation.c
	* gdk-pixbuf-io.c
	* io-xbm.c
	* io-xpm.c
	* make-inline-pixbuf.c
	* queryloaders.c: Use gstdio wrappers. Document that file names
	are in the GLib file name encoding.

	* gdk-pixbuf-csource.c
	* queryloaders.c: On Windows, convert command line arguments and
	environment variable values from locale encoding to UTF-8.

	* queryloaders.c: On Windows, use wide character API when
	available.

	* Makefile.am
	* gdk-pixbuf-core.h
	* gdk-pixbuf-io.c
	* gdk-pixbuf-animation.h
	* gdk-pixbuf-animation.c: Like in GLib, for DLL ABI stability on
	Windows, add binary compatibility versions of functions that take
	file names as arguments. They use the system codepage, not GLib
	file name encoding (which is UTF-8 on Windows). Use #defines to
	make newly compiled code use the "real" functions that use the
	GLib file name encoding scheme.

2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.5.6 ===

2004-11-30  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-animation.c (gdk_pixbuf_animation_iter_get_pixbuf): 
	Fix a typo in the docs.  (#159955, Masao Mutoh)

2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am (gdk-pixbuf-alias.h): Use the perl found by 
	configure.  (#149826, Morten Welinder)

Sun Nov 28 12:11:21 2004  Manish Singh  <yosh@gimp.org>

	* makegdkpixbufalias.pl: Typo fix, so attributes are really
	propagated.

2004-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf.symbols: 
	* Makefile.am: Mark get_type() functions generated by glib-mkenums 
	as const.

Thu Nov 25 14:21:37 2004  Manish Singh  <yosh@gi,p.org>

	* abicheck.sh: filter out G_GNUC stuff when doing the compare.

2004-11-23  Matthias Clasen  <mclasen@redhat.com>
